--- a/creataccount.css
+++ b/creataccount.css
@@ -21,6 +21,7 @@
 }
 .menu{
     display: flex;
+    align-items: center;
     margin-top: 4vh;
 }
 .menu a {
@@ -36,7 +37,9 @@
 .log{
     background-color: #DB4444;
     border: none;
-    width: 7vh;
+    /* width: 7vh; */
+    padding: 10px;
+    color: white !important;
     margin-left: 3vw;
     border-radius: 5px;
 }
@@ -44,6 +47,7 @@
     margin-left: 6vh;
     border: none;
     background-color: #cecece;
+    padding: 10px;
 }
 .menu a {
     margin-left: 90px;
@@ -56,17 +60,24 @@ margin-left: 40%;
     margin-top: 10vh;
     display: block;
 }
+.account2 h1 {
+    margin: 20px 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
 .account2 input{
-    width: 15vw;
-    height: 3vh;
+    width: 20vw;
+    padding: 5px;
+    margin: 10px 0;
+    border-radius: 5px;
 }
 .account2 button{
     background-color: #DB4444;
     color: white;
-    /* margin-top: ; */
+    margin-top: 30px;
     border: none;
     height: 7vh;
-    width: 15vw;
+    width: 21vw;
     border-radius: 10px;
 }
 .account2 a{
