--- a/about.css
+++ b/about.css
@@ -19,48 +19,30 @@
  margin-left: 33vw;
  margin-top:2vh ;
 }
-.menu{
-    display: flex;
-    margin-top: 4vh;
-}
-.menu a {
-    color: black;
-    margin-left:7vw;
-    text-decoration: none;
-}
-.menu i {
-    color: black;
-    margin-left:7vw;
-    text-decoration: none;
-}
+
 .log{
     background-color: #DB4444;
+    color: white !important;
+    padding: 10px;
     border: none;
-    width: 7vh;
     margin-left: 3vw;
     border-radius: 5px;
 }
-.menu input{
-    margin-left: 6vh;
-    border: none;
-    background-color: #cecece;
-}
-.menu a {
-    margin-left: 90px;
-}
-.menu a:hover {
-    text-decoration: underline;
-}
+
 .story{
     margin-left:30vh;
     margin-top: 8%;
 }
 .story p{
-    width: 15vw;
-    font-size: 20px
+    width: 20vw;
+    /* font-size: 35px; */
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px
 }
 .story h1{
 font-size: 60px;
+font-family: Arial, Helvetica, sans-serif;
+margin-bottom: 20px;
 }
 .p1p{
     margin-top: -20vh;
@@ -70,11 +52,9 @@ font-size: 60px;
     margin-left: 50%;
     margin-top: -30vh;
 }
-.dev{
-margin-top: 10%;
-}
 .dev {
     display: flex;
+
 }
 .dev1{
     width: 30vw;
@@ -219,3 +199,42 @@ height: 12vh;
     margin-top: 40vh;
     margin-left: -45%;
 }
+.menu{
+    display: flex;
+    align-items: center;
+    margin-top: 4vh;
+    justify-content: space-evenly;
+    padding: 0 40px;
+}
+.menu a {
+    margin-left: 2vh;
+    color: black;
+    text-decoration: none;
+}
+.menu a:hover {
+    text-decoration: underline;
+}
+.menu i {
+    color: black;
+    margin-left:7vw;
+    text-decoration: none;
+}
+
+   .right {
+        text-align: center;
+    }
+
+    .main {
+        /* width: 99vw; */
+        padding: 100px;
+    }
+    .footer {
+        width: 99vw;
+    }
+    .main img {
+        width: 100%;
+    }
+    .footer img {
+        width: 100%;
+        height: 400px;
+    }
