--- a/detail1.css
+++ b/detail1.css
@@ -21,25 +21,45 @@
 }
 .menu{
     display: flex;
+    align-items: center;
     margin-top: 4vh;
+    justify-content: space-evenly;
+    padding: 0 20px;
 }
 .menu a {
-    margin-left:10vh;
+    /* margin-left: 2vh; */
     color: black;
     text-decoration: none;
 }
 .menu a:hover {
     text-decoration: underline;
 }
-.main{
+.log{
+    background-color: #DB4444;
+    border: none;
+    color: white !important;
+    margin-left: 10px;
+    padding: 10px;
+    /* width: 7vh; */
+    /* margin-left: 10vw; */
+    border-radius: 5px;
+}
+.menu input{
+    margin-left: 10vh;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #cecece;
+}
+/* .main{
     display: flex;
     padding:50px ;
 }
 .main img{
     width: 10%;
     height: 380px;
-}
-.details{
+} */
+/* .details{
     margin-top: -30%;
     margin-left: 100vh;
     padding: 50px;
@@ -51,4 +71,74 @@
 }
 span{
     font-weight: 300;
+} */
+.flex {
+    display: flex;    
+}
+
+.main {
+    width: 99vw;
+    height: 80vh;
+    padding: 40px 140px;
+    justify-content: space-around;
+    
+}
+.imgDiv {
+    /* width: 700px; */
+    padding: 20px 100px;
+    /* background-color: red; */
+}
+.imgDiv img {
+    width: 100%;
+    height: 90%;
+}
+.details {
+    width: 40%;
+}
+.delivery {
+    align-items: center;
+    border: solid 2px ;
+    border-radius: 10px;
+    margin: 5px;
+    padding: 20px;
+}
+.delivery div{
+    margin-left: 30px;
+}
+.delivery a {
+    color: black;
+    font-size: 15px;
+}
+.details button {
+    padding: 15px 30px;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    border: 2px;
+    border-style:outset;
+
+}
+.delivery i {
+    font-size: 35px;
+}
+
+.details h2 {
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+.details p {
+    font-size: 25px;
+    margin: 10px 0;
+
+}
+.details p:nth-child(2) {
+    color: rgb(255, 191, 0);
+}
+.details p:nth-child(4) {
+    font-size: 12px;
+}
+
+.footer img{
+    width: 100vw;
+    height: 350px;
 }
