--- a/newproduct.css
+++ b/newproduct.css
@@ -1,80 +1,153 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Jersey+15&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Linear+A&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
     margin: 0;
     padding: 0;
-    border: border-box;
+    font-family: "Montserrat", sans-serif;
+    box-sizing: border-box;
 }
-.sale{
-    background-color: #DB4444;
-    color: #FAFAFA;
+.main {
+    width: 100vw;
+}
+.menu {
+    /* background-color: #DB4444; */
     display: flex;
-    width: 99vw;
-    height: 5vh;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+    border-bottom: 1px rgb(204, 204, 204) solid;
+    margin-bottom: 20px;
 }
-.sale a{
-    color: #FAFAFA;
-    margin-top: 1vw;
-    margin-left: 1vh;
-}
-.sale p {
- margin-left: 33vw;
- margin-top:2vh ;
-}
-.menu{
+.menu div:first-child {
     display: flex;
-    margin-top: 4vh;
+    justify-content: space-between;
+    align-items:center;
+    /* background-color: red; */
+    width: 40%;
 }
 .menu a {
-    color: black;
-    margin-left:7vw;
-    text-decoration: none;
+    transition: 0.5s;
+    padding: 5px;
 }
 .menu a:hover {
-    text-decoration: underline;
+    transform: scaleX(1.1);
+    transition: 0.5s;
+    border-bottom: 1px solid;
 }
-.shop{
-    background-color: #DB4444;
-    width: 3.5vw;
-    margin-left: 2vw;
-    border-radius: 5px;
+.section2 {
+    width: 37%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    /* background-color: red; */
 }
-.log{
-    background-color: #DB4444;
+.section2 input{
+    padding: 5px;
     border: none;
-    width: 7vh;
-    margin-left: 3vw;
-    border-radius: 5px;
+    width: 200px;
+    outline: none;
+    background-color: rgb(252, 240, 240);
 }
-.newproduct a {
+.section2 button {
+    background-color: #DB4444;
     color: white;
-    margin-left: 6vh;
-    margin-top: 10vh;
-    text-decoration: none;
-}
-.newproduct {
-    text-decoration: none;
-    color: white;
-    background-color:rgb(0, 162, 255);
-    width: 10vw;
-    height: 5vh;
-    margin-left: 7vh;
-    margin-top: 5vh;
+    border: none;
+    padding: 7px 25px;
     border-radius: 10px;
+
 }
-tbody img{
-    width: 100px;
-    height: 80px;
+.section2 i {
+    font-size: 20px;
+    transition: 0.3s;
 }
-tbody td{
+.section2 i:hover {
+    transform: scale(1.3);
+    transition: 0.3s;
+}
+.section2 button {
+    transition: 0.3s;
+}
+.section2 button:hover {
+    transform:scale(1.1);
+    transition: 0.3s;
+}
+.flex {
+    display: flex;
+}
+.menu a {
+    text-decoration: none;
+    color: black;
+    /* padding: 10px; */
+
+}
+.menu div a:first-child {
+    font-size: 30px;
+    font-weight: 700;
+}
+.discountRed {
+    background-color: #DB4444;
     text-align: center;
+    color: white;
+    padding: 13px;
+}
+.discountRed a {
+    color: white;
+}
+.newProduct {
+    background-color: rgb(42, 127, 193);
+    color: white;
+    border: none;
+    padding: 10px 25px;
+    border-radius: 8px;
+    font-weight: bold;
+    margin: 0 140px;
+}
+.myProducts {
+    width: 83%;
+    margin: 20px auto;
     padding: 10px;
 }
-tbody button{
-    background-color: red;
-    color: white;
+.myProducts table {
+    width: 100%;
+}
+.myProducts table tbody *{
+    text-align: center;
+    
+    /* background-color: red; */
+}
+
+thead {
+    border: solid 2px;
+}
+td {
+    /* background-color: red; */
+}
+.img {
+    height: 150px;
+    width: 150px;
+    transition: 0.5s;
+}
+.img:hover {
+    transform: scale(1.05);
+    transition: 0.5s;
+}
+.bt1 {
+    background-color:rgb(0, 76, 255);
     padding: 10px;
     border: none;
     border-radius: 5px;
+    color: white;
 }
-thead tr th{
-    padding: 80px;    
+.bt2 {
+    background-color:#DB4444;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+}
+
+.footer img{
+    width: 100vw;
+    height: 350px;
 }
