--- a/style2.css
+++ b/style2.css
@@ -23,12 +23,12 @@
 .menu{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
     margin-top: 4vh;
-    padding: 0 50px;
+    justify-content: space-evenly;
+    padding: 0 20px;
 }
 .menu a {
-    margin-left:10vh;
+    /* margin-left: 2vh; */
     color: black;
     text-decoration: none;
 }
@@ -61,7 +61,7 @@
     background-color: #cecece;
 }
 .menu a {
-    margin-left: 90px;
+    margin-left: 40px;
 }
 .img{
     background-color: black;
