--- a/userdetail.css
+++ b/userdetail.css
@@ -1,34 +1,131 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Jersey+15&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Linear+A&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
     margin: 0;
     padding: 0;
-    border: border-box;
-}
-.sale{
-    background-color: #DB4444;
-    color: #FAFAFA;
-    display: flex;
-    width: 99vw;
-    height: 5vh;
-}
-.sale a{
-    color: #FAFAFA;
-    margin-top: 1vw;
-    margin-left: 1vh;
-}
-.sale p {
- margin-left: 33vw;
- margin-top:2vh ;
-}
-.menu{
-    display: flex;
-    margin-top: 4vh;
-}
-.menu a {
-    color: black;
-    margin-left:7vw;
-    text-decoration: none;
-}
-.menu a:hover {
-    text-decoration: underline;
+    font-family: "Montserrat", sans-serif;
+    box-sizing: border-box;
 }
 
+.main {
+    width: 100vw;
+}
+.menu {
+    /* background-color: #DB4444; */
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+    border-bottom: 1px rgb(204, 204, 204) solid;
+    margin-bottom: 20px;
+}
+.menu div:first-child {
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    /* background-color: red; */
+    width: 40%;
+}
+.menu a {
+    transition: 0.5s;
+    padding: 5px;
+}
+.menu a:hover {
+    transform: scaleX(1.1);
+    transition: 0.5s;
+    border-bottom: 1px solid;
+}
+.discountRed {
+    background-color: #DB4444;
+    text-align: center;
+    color: white;
+    padding: 13px;
+}
+.discountRed a {
+    color: white;
+}
+.section2 {
+    width: 37%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* padding: 10px; */
+    /* background-color: red; */
+}
+.section2 input{
+    padding: 7px;
+    border-radius: 7px;
+    border: none;
+    width: 220px;
+    outline: none;
+    background-color: rgb(200, 198, 198);
+}
+.section2 button {
+    background-color: #DB4444;
+    color: white;
+    border: none;
+    padding: 7px 20px;
+    border-radius: 5px;
+
+}
+.section2 i {
+    font-size: 20px;
+    transition: 0.3s;
+}
+.section2 i:hover {
+    transform: scale(1.3);
+    transition: 0.3s;
+}
+.section2 button {
+    transition: 0.3s;
+}
+.section2 button:hover {
+    transform:scale(1.1);
+    transition: 0.3s;
+}
+.flex {
+    display: flex;
+}
+.menu a {
+    text-decoration: none;
+    color: black;
+    /* padding: 10px; */
+
+}
+.menu div a:first-child {
+    font-size: 30px;
+    font-weight: 700;
+}
+.userData {
+    margin: 0 auto;
+    width: 85%;
+    padding: 20px;
+}
+.userData p,h2 {
+    margin: 10px;
+    font-weight: bold;
+}
+.userData h2 {
+    color: #DB4444;
+    font-size: 30px;
+}
+.userData p {
+    font-size: 20px;
+}
+.products {
+    background-color: #DB4444;
+    border: none;
+    border-radius: 5px;
+    padding: 15px 15px;
+    margin: 0 140px;
+    color: white;
+    cursor: pointer;
+}
+.userData span {
+    font-weight: normal;
+}
+
+.footer img{
+    width: 100vw;
+    height: 350px;
+}
